[package]
name = "ty-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json","tls"] }
rocket_cors = "0.6.0-alpha2"
jsonwebtoken = "8.0"
serde = { version = "1.0.148", features = ["derive"] }
dashmap = "5.1.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
shuttle-rocket = "0.47.0"
shuttle-runtime = "0.47.0"
tokio = { version = "1.26", features = ["full"] }
regex = "1.5"
shuttle-secrets = "0.42.0"
anyhow = "1.0.66"
shuttle-shared-db = { version = "0.47.0", features = ["postgres", "sqlx"] }
sqlx = "0.7.1"